# BackEnd/internal/routes/route/auth_route.go
@@ -1,0 +1,18 @@
+package routes
+
+import (
+	"web_doscom/internal/auth"
+
+	"github.com/gin-gonic/gin"
+)
+
+// app *server.Application
+func AuthRoutes(r *gin.RouterGroup, AuthHandler *auth.AuthHandler) {
+
+	r.POST("/login", AuthHandler.LoginHandler) // login route for admin and superadmin
+	r.POST("/register", AuthHandler.RegisterUser)
+
+	// Logout route
+	r.POST("/logout", AuthHandler.Logout)
+
+}
